Meetings API (#434)
* Added MeetingsClient stub

* Added api-eu base URI

* Added endpoints & types

* Added _links

* Added missing fields for room

* Format createdAt & expiresAt

* Added validation to MeetingRoom

* Added documentation for top-level methods

* Validate theme colour

* Some fixes to ser/des properties

* Added test stub utilities

* Added test for getRoom

* Comprehensive MeetingRoomTest

* Hide UrlContainer nesting from user

* Bumped sample expiration year

* Param validation in MeetingsClient

* Use UUID in MeetingsClient methods

* GetRooms client test

* expireAfterUse validation

* Fixed UpdateApplicationRequest

* Use ListX for plural endpoints

* App & recording ID now UUIDs

* Rename to match conventions

* Added simplified listRooms call

* Added Recordings test

* Test listLogoUploadUrls

* Use Instant instead of ZonedDateTime

* More tests

* More tests & edge case coverage

* UpdateRoom/UpdateTheme tests

* Use enum for UISettings.Language

* Added ThemeTest

* Fixed updateTheme & added uploadLogo

* Added uploadLogo method & wrapper

* Updated MeetingRoom.expiresAt builder

* Updated BugRepro

* Fixed failing test

* Various fixes & improvements

* 100% coverage

* Removed /beta from URLs

* Added MeetingsResponseException

* Made SelfReferencing final

* Added webhook

* Improved VonageApiResponseException coverage

* Hydrate MeetingRoom on creation response

* Hydrate Theme

* Recurse through ListRooms response

* Added throws to MeetingsClient doc

* Clarified thread safety FAQ

* More fixes

* Renamed setThemeLogo