@@ -27,6 +27,7 @@ import org.apache.http.HttpResponse;
 import org.apache.http.util.EntityUtils;
 import java.io.IOException;
 import java.net.URI;
+import java.util.List;
 import java.util.Objects;
 
 /**
@@ -38,7 +39,23 @@ import java.util.Objects;
 public abstract class VonageApiResponseException extends VonageClientException {
 	protected URI type;
 	protected String title, detail, instance;
+	protected List<?> errors;
 	@JsonIgnore protected int statusCode;
+
+	protected VonageApiResponseException() {
+	}
+
+	protected VonageApiResponseException(String message) {
+		super(message);
+	}
+
+	protected VonageApiResponseException(String message, Throwable cause) {
+		super(message, cause);
+	}
+
+	protected VonageApiResponseException(Throwable cause) {
+		super(cause);
+	}
 
 	/**
 	 * Link to the <a href=https://developer.vonage.com/en/api-errors>API error type</a>.
@@ -78,6 +95,18 @@ public abstract class VonageApiResponseException extends VonageClientException {
 	@JsonProperty("instance")
 	public String getInstance() {
 		return instance;
+	}
+
+	/**
+	 * Additional description of problems encountered with the request.
+	 * This is typically only applicable to 400 or 409 error codes.
+	 *
+	 * @return The list of errors returned from the server (could be a Map or String),
+	 * or {@code null} if none / not applicable.
+	 */
+	@JsonProperty("errors")
+	public List<?> getErrors() {
+		return errors;
 	}
 
 	/**
@@ -145,9 +174,9 @@ public abstract class VonageApiResponseException extends VonageClientException {
 	protected static <E extends VonageApiResponseException> E fromJson(Class<E> clazz, String json) {
 		if (json == null || json.length() < 2) {
 			try {
-				return clazz.newInstance();
+				return clazz.getConstructor().newInstance();
 			}
-			catch (InstantiationException | IllegalAccessException ex) {
+			catch (Exception ex) {
 				throw new VonageUnexpectedException(ex);
 			}
 		}
@@ -156,7 +185,7 @@ public abstract class VonageApiResponseException extends VonageClientException {
 			return mapper.readValue(json, clazz);
 		}
 		catch (IOException ex) {
-			throw new VonageUnexpectedException("Failed to produce "+clazz.getSimpleName()+" from json.", ex);
+			throw new VonageResponseParseException("Failed to produce "+clazz.getSimpleName()+" from json.", ex);
 		}
 	}
 
